--- a/Prjct1-formValidator/style.css
+++ b/Prjct1-formValidator/style.css
@@ -76,3 +76,18 @@ h2 {
   left: 0;
   visibility: hidden;
 }
+
+.form-control.error small {
+  visibility: visible;
+}
+
+.form button {
+  cursor: pointer;
+  background: #3498db;
+  border: 2px solid #3498db;
+  color: #fff;
+  font-size: 16px;
+  padding: 10px;
+  margin-top: 20px;
+  width: 100%;
+}
